@startuml classes_engine
set namespaceSeparator none
class "aiBoardGame.logic.engine.auxiliary.Board" as aiBoardGame.logic.engine.auxiliary.Board<[Side,SideState]> #aliceblue {
}
enum "aiBoardGame.logic.engine.auxiliary.Side" as aiBoardGame.logic.engine.auxiliary.Side #aliceblue {
}
class "aiBoardGame.logic.engine.xiangqiEngine.XiangqiEngine" as aiBoardGame.logic.engine.xiangqiEngine.XiangqiEngine #aliceblue {
}
class "aiBoardGame.logic.engine.move.MoveRecord" as aiBoardGame.logic.engine.move.MoveRecord #antiquewhite {
}
aiBoardGame.logic.engine.auxiliary.Board --* aiBoardGame.logic.engine.xiangqiEngine.XiangqiEngine : board
aiBoardGame.logic.engine.auxiliary.Side --* aiBoardGame.logic.engine.xiangqiEngine.XiangqiEngine : currentSide
aiBoardGame.logic.engine.move.MoveRecord "0..*" --* aiBoardGame.logic.engine.xiangqiEngine.XiangqiEngine : moveHistory
@enduml
